--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -31,7 +31,7 @@
 }
 
 .s7img {
-	position: absolute;
+	position: relative;
 	margin-top: 3px;
 	margin-bottom: 0;
 	margin-left: 0;
@@ -195,6 +195,7 @@ ol {
 	background-color: var(--background-primary);
 	transition: background-color 2s ease;
 	width: 100%;
+	height: 62px;
 	.navbar-menu,
 	.navbar-burger,
 	.navbar-item {
