--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -21,7 +21,7 @@
 
 .typewriter-container {
   position: absolute;
-  top: 10px;
+  top: 0;
   width: auto;
   display: flex;
   align-items: center;
@@ -113,7 +113,7 @@
   position: relative;
   color: rgb(179, 207, 250);
   background-color: var(--background-secondary);
-  border-radius: 3px;
+  border-radius: 4px;
   border: 1px solid rgb(134, 180, 255);
   padding: 5px;
   width: 180px !important;
@@ -227,6 +227,7 @@
   }
 }
 
+
 $n: 25;
 // $bgColor: rgb(204,207,209);
 $bgColor: var(--background-primary);
@@ -324,13 +325,14 @@ $circleradius:120px;
   width: $circleradius;
   height: $circleradius;
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.3);
+  opacity: 0.9;
+  background-color: rgba(39, 35, 35, 0.474);
   box-shadow: 0 0 20px 10px rgba(0, 0, 255, 0.3);
   transition: opacity 1s ease-in-out;
 }
 
 .circle:hover .glow {
-  opacity: 0.6;
+  opacity: 0.1;
 }
 
 .circle-text {
@@ -338,11 +340,12 @@ $circleradius:120px;
   color: var(--lighter);
   font-weight: bold;
   letter-spacing: 2px;
-  transition: color 0.5s ease-in-out;
+  transition: color 1s ease-in-out;
 }
 
 .circle-text:hover {
   color: white;
+  opacity: 1;
 }
 
 
