--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -45,14 +45,15 @@
 	font-size: 42px;
 	letter-spacing: 2px;
 	color: var(--lighter);
+	&:focus,
 	&:hover {
-		color:transparent;
+		color:transparent !important;
 		// background: url("https://media.giphy.com/media/3bc8pP1rVdfgN1uoMV/giphy.gif");
-		background: url("https://media.giphy.com/media/9JxkPTP3alOykb8PmQ/giphy.gif");
+		background: url("https://media.giphy.com/media/9JxkPTP3alOykb8PmQ/giphy.gif") !important;
 		// background: url("https://media.giphy.com/media/lKaeQAunM3hZaqsOpj/giphy.gif?cid=ecf05e47xuf9z7vq1a8iarlescw065qcad2bri7zfgzgemzh&ep=v1_gifs_search&rid=giphy.gif&ct=g");
-		background-size: cover;
-		background-position: center;
-		-webkit-background-clip: text;
+		background-size: cover !important;
+		background-position: center !important;
+		-webkit-background-clip: text !important;
 	}
 }
 
@@ -186,7 +187,7 @@ $radius:10px;
 	left: -0.02em;
 	right: -0.02em;
 	bottom: -0.015em;
-	opacity: 0.2;
+	opacity: 0.3;
 	transition: opacity 200ms linear;
 	background: linear-gradient(
 	  -45deg,
@@ -389,9 +390,7 @@ $radius:10px;
   .form textarea {
 	width: 40%;
 	padding: 10px;
-	margin-bottom: 10px;
 	border: 1px solid hsl(219, 92%, 85%);
-	border-radius: 4px;
 	box-sizing: border-box;
   }
 
@@ -402,6 +401,9 @@ $radius:10px;
 	color: white;
 	background-color: var(--background-primary);
 	letter-spacing: 2px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
+	margin-bottom: 20px;
 	:focus {
 		border-color: hsl(233, 100%, 84%);
 	}
@@ -414,9 +416,16 @@ $radius:10px;
 	color: white;
 	background-color: var(--background-primary);
 	letter-spacing: 2px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
 	:focus {
 		border-color: hsl(233, 100%, 84%);
 	}
+  }
+
+  .sayhi {
+	font-size: 24px;
+	font-weight: 700;
   }
 
   .popup {
@@ -424,4 +433,29 @@ $radius:10px;
 	align-items: center;
 	font-size: 20px;
 	padding: 10px;
+  }
+
+
+
+.progress-bar {
+	position: fixed;
+	background-color: grey;
+	height: 50%;
+	width: 0.1em;
+	border-radius: 1em;
+	top: 30%;
+	right: 2%;
+	z-index: 100;
+	opacity: 0.5;
+	transition: opacity 1s linear;
+  }
+  .progress-bar.hid {
+	opacity: 0;
+  }
+  .progress-bar:hover {
+	opacity: 0.7;
+  }
+  .filled {
+	background-image: linear-gradient(to bottom, black, blue, var(--accent), var(--lighter));
+	border-radius: 1em;
   }
