--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -209,21 +209,38 @@ ol {
 	right: 22px;
 	width: 25px;
 	height: 100vh;
-	overflow: hidden;
 	justify-content: flex-start;
   	align-items: center;
-	  .navbar-item {
+	cursor: url("../../public/assets/files/hand.svg"), pointer;
+	.navbar-item {
 		margin-bottom: 5px;
 		border-bottom: 3px solid transparent;
 		transition: 0.3s ease-in-out;
 		display: flex;
 		align-items: center;
+		background: none;
 		&:hover,
 		&:focus {
-			background: none;
+			background: transparent;
 			transform: translateY(-0.1rem);
 		}
 	}
+	.navbar-item::after {
+		content: attr(data-tooltip);
+		position: absolute;
+		top: 50%;
+		right: 100%;
+		transform: translateY(-45%);
+		background: transparent;
+		color: var(--lighter);
+		padding: 5px;
+		border-radius: 5px;
+		opacity: 0;
+		transition: opacity 0.4s ease-in-out;
+	  }
+	  .navbar-item:hover::after {
+		opacity: 1;
+	  }
 }
 
 .navbar-phone-menu {
