--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,7 +11,7 @@
 		--accent: #6971cd;
 		--background-primary: #0A0D14;
 		--background-secondary: #141A29;
-		--background-secondary-alt: #141A29;
+		--background-secondary-alt: #101628;
 		--foreground-primary: #a8b5c3;	
 		--purple: #492dd5ec;
 	}
