--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,7 @@
 	cursor: url("data:image/svg+xml,%3Csvg version='1.1' class='drop' id='normal_cursor' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='45px' height='45px' viewBox='0 0 512 512' style='color: blue;' xml:space='preserve'%3E %3Cpath d='M 0 0 L 55 170 A 1 1 0 0 0 168 62 L 0 0' stroke='blue' stroke-width='2px' fill='rgb(204,222,254)' /%3E %3C/svg%3E"), pointer;
 	body {
 		overflow: hidden;
+		min-height: 100%;
 	}
 	#introduction {
 		flex-direction: column;
@@ -99,28 +100,6 @@
 	}
 
 	#blogging {
-		background-color: var(--background-primary);
-		padding: 8rem 1rem;
-
-		.blogging-container {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-
-			h1 {
-				color: var(--foreground-primary);
-				font-size: 36px;
-				font-weight: bold;
-
-				align-items: center;
-				margin-bottom: 1rem;
-			}
-		}
-
-	}
-
-	#my-blogger {
 		background-color: var(--background-primary);
 		padding: 8rem 1rem;
 
