Post on mobile view

--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -37,6 +37,9 @@
 .scblogheadertagline {
 	font-size: 20px;
 }
+.scblogheadertagline.mobile {
+	font-size: 18px;
+}
 .s7logo {
 	visibility: visible;
 	margin-left: 5px;
